# ScrapingSparkLearningWithPython

./: README.md  main.py  pyproject.toml  requirements.txt
Holiday_Detection_Parsing/: extracting_parsing_holidays.py  storing_output_to_db.py
data/: holiday.db
tests/unit/: test_fetching_parse_holiday.py
